# vm-spawner

./: .envrc  .gitignore  LICENSE  README.md  default.nix  flake-module.nix  flake.nix  pyproject.toml  shell.nix
vm_spawner/: __init__.py  cli.py  custom_logger.py  data.py  dirs.py  errors.py  hetzner.py  ssh.py  terraform.py
vm_spawner/assets/: __init__.py
vm_spawner/assets/hetzner/terraform/: variables.tf  vm.tf
vm_spawner/assets/kvm/: cloud_init.cfg  network_config.cfg
vm_spawner/kvm/: __main__.py  connect.py  create.py  deploy_vm.py  destroy.py  download.py  install.py  network.py  remote.py  upload.py
