[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "vm_spawner"
description = "A cloud vm spawner"
dynamic = ["version"]
scripts = { cvm = "vm_spawner:main", kvm = "vm_spawner.kvm.__main__:main" }
license = {text = "MIT"}


[tool.mypy]
python_version = "3.12"
pretty = true
warn_redundant_casts = true
disallow_untyped_calls = true
disallow_untyped_defs = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = "libvirt"
ignore_missing_imports = true

[tool.setuptools.package-data]
vm_spawner = [
  "assets/**",
  "**/py.typed",
]

[tool.ruff]
target-version = "py311"
line-length = 88
lint.select = [
  "A",
  "ANN",
  "ASYNC",
  "B",
  "C4",
  "DTZ",
  "E",
  "EM",
  "F",
  "FA",
  "I",
  "ICN",
  "ISC",
  "LOG",
  "N",
  "PIE",
  "PT",
  "PTH",
  "PYI",
  "Q",
  "RET",
  "RSE",
  "RUF",
  "SIM",
  "SLF",
  "SLOT",
  "T10",
  "TID",
  "TRY",
  "U",
  "W",
  "YTT",
]
lint.ignore = [
  "A003",
  # A005 Module `inspect` shadows a Python standard-library module
  # We might asctually wants to fix this.
  "A005",
  "ANN401",
  "TRY400",
  "E402",
  "E501",
  "E731",
  "PT001",
  "PT023",
  "RET504",
  "SIM102",
  "SIM108",
  "SIM112",
  "ISC001",
]
